// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EntityDetailsForm/> default properties 1`] = `
<form
  className=""
>
  <div
    className="margin-bottom margin-top row"
  >
    <div
      className="col-xs-2"
    >
      <span
        className="domain-no-wrap"
      >
        Name
         *
      </span>
    </div>
    <div
      className="col-xs-10"
    >
      <input
        className="form-control"
        id="entity-name"
        onChange={[MockFunction]}
        placeholder="Enter a name for this entity"
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    className="margin-bottom row"
  >
    <div
      className="col-xs-2"
    >
      <span
        className="domain-no-wrap"
      >
        Description
        <span
          className="label-help-target"
          onMouseOut={[Function]}
          onMouseOver={[Function]}
        >
          <span
            className="label-help-icon fa fa-question-circle"
          />
        </span>
        
      </span>
    </div>
    <div
      className="col-xs-10"
    >
      <textarea
        className="form-control textarea-noresize"
        id="entity-description"
        onChange={[MockFunction]}
        value=""
      />
    </div>
  </div>
  <div
    className="margin-bottom row"
  >
    <div
      className="col-xs-2"
    >
      <div
        className="name-expression-label-div"
        onMouseEnter={[Function]}
      >
        Naming 
        <span
          className="domain-no-wrap"
        >
          Pattern
          <span
            className="label-help-target"
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            <span
              className="label-help-icon fa fa-question-circle"
            />
          </span>
          
        </span>
      </div>
    </div>
    <div
      className="col-xs-10"
    >
      <input
        className="form-control"
        id="entity-nameExpression"
        onChange={[MockFunction]}
        type="text"
        value=""
      />
    </div>
  </div>
</form>
`;

exports[`<EntityDetailsForm/> initial data 1`] = `
<form
  className=""
>
  <div
    className="margin-bottom margin-top row"
  >
    <div
      className="col-xs-2"
    >
      <span
        className="domain-no-wrap"
      >
        Name
         *
      </span>
    </div>
    <div
      className="col-xs-10"
    >
      <input
        className="form-control"
        id="entity-name"
        onChange={[MockFunction]}
        placeholder="Enter a name for this entity"
        type="text"
        value="Test Entity Name"
      />
    </div>
  </div>
  <div
    className="margin-bottom row"
  >
    <div
      className="col-xs-2"
    >
      <span
        className="domain-no-wrap"
      >
        Description
        <span
          className="label-help-target"
          onMouseOut={[Function]}
          onMouseOver={[Function]}
        >
          <span
            className="label-help-icon fa fa-question-circle"
          />
        </span>
        
      </span>
    </div>
    <div
      className="col-xs-10"
    >
      <textarea
        className="form-control textarea-noresize"
        id="entity-description"
        onChange={[MockFunction]}
        value="Test Entity Description"
      />
    </div>
  </div>
  <div
    className="margin-bottom row"
  >
    <div
      className="col-xs-2"
    >
      <div
        className="name-expression-label-div"
        onMouseEnter={[Function]}
      >
        Naming 
        <span
          className="domain-no-wrap"
        >
          Pattern
          <span
            className="label-help-target"
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            <span
              className="label-help-icon fa fa-question-circle"
            />
          </span>
          
        </span>
      </div>
    </div>
    <div
      className="col-xs-10"
    >
      <input
        className="form-control"
        id="entity-nameExpression"
        onChange={[MockFunction]}
        type="text"
        value="Test Name Expression"
      />
    </div>
  </div>
</form>
`;

exports[`<EntityDetailsForm/> nameExpression properties 1`] = `
<form
  className=""
>
  <div
    className="margin-bottom margin-top row"
  >
    <div
      className="col-xs-2"
    >
      <span
        className="domain-no-wrap"
      >
        Name
         *
      </span>
    </div>
    <div
      className="col-xs-10"
    >
      <input
        className="form-control"
        id="entity-name"
        onChange={[MockFunction]}
        placeholder="Enter a name for this entity"
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    className="margin-bottom row"
  >
    <div
      className="col-xs-2"
    >
      <span
        className="domain-no-wrap"
      >
        Description
        <span
          className="label-help-target"
          onMouseOut={[Function]}
          onMouseOver={[Function]}
        >
          <span
            className="label-help-icon fa fa-question-circle"
          />
        </span>
        
      </span>
    </div>
    <div
      className="col-xs-10"
    >
      <textarea
        className="form-control textarea-noresize"
        id="entity-description"
        onChange={[MockFunction]}
        value=""
      />
    </div>
  </div>
  <div
    className="margin-bottom row"
  >
    <div
      className="col-xs-2"
    >
      <div
        className="name-expression-label-div"
        onMouseEnter={[Function]}
      >
        Naming 
        <span
          className="domain-no-wrap"
        >
          Pattern
          <span
            className="label-help-target"
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            <span
              className="label-help-icon fa fa-question-circle"
            />
          </span>
          
        </span>
      </div>
    </div>
    <div
      className="col-xs-10"
    >
      <input
        className="form-control"
        id="entity-nameExpression"
        onChange={[MockFunction]}
        placeholder="Enter a name expression"
        type="text"
        value=""
      />
    </div>
  </div>
</form>
`;

exports[`<EntityDetailsForm/> with formValues 1`] = `
<form
  className=""
>
  <div
    className="margin-bottom margin-top row"
  >
    <div
      className="col-xs-2"
    >
      <span
        className="domain-no-wrap"
      >
        Name
         *
      </span>
    </div>
    <div
      className="col-xs-10"
    >
      <input
        className="form-control"
        id="entity-name"
        onChange={[MockFunction]}
        placeholder="Enter a name for this entity"
        type="text"
        value="Test Entity Name"
      />
    </div>
  </div>
  <div
    className="margin-bottom row"
  >
    <div
      className="col-xs-2"
    >
      <span
        className="domain-no-wrap"
      >
        Description
        <span
          className="label-help-target"
          onMouseOut={[Function]}
          onMouseOver={[Function]}
        >
          <span
            className="label-help-icon fa fa-question-circle"
          />
        </span>
        
      </span>
    </div>
    <div
      className="col-xs-10"
    >
      <textarea
        className="form-control textarea-noresize"
        id="entity-description"
        onChange={[MockFunction]}
        value="Test Entity Description"
      />
    </div>
  </div>
  <div
    className="margin-bottom row"
  >
    <div
      className="col-xs-2"
    >
      <div
        className="name-expression-label-div"
        onMouseEnter={[Function]}
      >
        Naming 
        <span
          className="domain-no-wrap"
        >
          Pattern
          <span
            className="label-help-target"
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            <span
              className="label-help-icon fa fa-question-circle"
            />
          </span>
          
        </span>
      </div>
    </div>
    <div
      className="col-xs-10"
    >
      <input
        className="form-control"
        id="entity-nameExpression"
        onChange={[MockFunction]}
        type="text"
        value="Test Name Expression"
      />
    </div>
  </div>
</form>
`;

exports[`<EntityDetailsForm/> with previewName 1`] = `
<EntityDetailsForm
  data={
    Immutable.Map {
      "rowId": 1,
      "name": "Test Entity Name",
      "description": "Test Entity Description",
      "nameExpression": "Test Name Expression",
    }
  }
  noun="Entity"
  onFormChange={[MockFunction]}
  onNameFieldHover={[MockFunction]}
  previewName="abc"
  showPreviewName={true}
>
  <Form
    bsClass="form"
    componentClass="form"
    horizontal={false}
    inline={false}
  >
    <form
      className=""
    >
      <Row
        bsClass="row"
        className="margin-bottom margin-top"
        componentClass="div"
      >
        <div
          className="margin-bottom margin-top row"
        >
          <Col
            bsClass="col"
            componentClass="div"
            xs={2}
          >
            <div
              className="col-xs-2"
            >
              <DomainFieldLabel
                label="Name"
                required={true}
              >
                <span
                  className="domain-no-wrap"
                >
                  Name
                   *
                </span>
              </DomainFieldLabel>
            </div>
          </Col>
          <Col
            bsClass="col"
            componentClass="div"
            xs={10}
          >
            <div
              className="col-xs-10"
            >
              <FormControl
                bsClass="form-control"
                componentClass="input"
                id="entity-name"
                onChange={[MockFunction]}
                placeholder="Enter a name for this entity"
                type="text"
                value="Test Entity Name"
              >
                <input
                  className="form-control"
                  id="entity-name"
                  onChange={[MockFunction]}
                  placeholder="Enter a name for this entity"
                  type="text"
                  value="Test Entity Name"
                />
              </FormControl>
            </div>
          </Col>
        </div>
      </Row>
      <Row
        bsClass="row"
        className="margin-bottom"
        componentClass="div"
      >
        <div
          className="margin-bottom row"
        >
          <Col
            bsClass="col"
            componentClass="div"
            xs={2}
          >
            <div
              className="col-xs-2"
            >
              <DomainFieldLabel
                helpTipBody="A short description for this entity."
                label="Description"
              >
                <span
                  className="domain-no-wrap"
                >
                  Description
                  <Component
                    id="tooltip"
                    title="Description"
                  >
                    <span
                      className="label-help-target"
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                    >
                      <span
                        className="label-help-icon fa fa-question-circle"
                      />
                      <Overlay
                        animation={[Function]}
                        placement="right"
                        rootClose={false}
                        show={false}
                      >
                        <Overlay
                          placement="right"
                          rootClose={false}
                          show={false}
                          transition={[Function]}
                        />
                      </Overlay>
                    </span>
                  </Component>
                </span>
              </DomainFieldLabel>
            </div>
          </Col>
          <Col
            bsClass="col"
            componentClass="div"
            xs={10}
          >
            <div
              className="col-xs-10"
            >
              <textarea
                className="form-control textarea-noresize"
                id="entity-description"
                onChange={[MockFunction]}
                value="Test Entity Description"
              />
            </div>
          </Col>
        </div>
      </Row>
      <Row
        bsClass="row"
        className="margin-bottom"
        componentClass="div"
      >
        <div
          className="margin-bottom row"
        >
          <Col
            bsClass="col"
            componentClass="div"
            xs={2}
          >
            <div
              className="col-xs-2"
            >
              <div
                className="name-expression-label-div"
                onMouseEnter={[Function]}
              >
                <DomainFieldLabel
                  helpTipBody={
                    <React.Fragment>
                      <p>
                        Pattern used for generating unique IDs for this 
                        entity
                        .
                      </p>
                      <NameExpressionPreview
                        previewName="abc"
                      />
                      
                    </React.Fragment>
                  }
                  label="Naming Pattern"
                >
                  Naming 
                  <span
                    className="domain-no-wrap"
                  >
                    Pattern
                    <Component
                      id="tooltip"
                      title="Naming Pattern"
                    >
                      <span
                        className="label-help-target"
                        onMouseOut={[Function]}
                        onMouseOver={[Function]}
                      >
                        <span
                          className="label-help-icon fa fa-question-circle"
                        />
                        <Overlay
                          animation={[Function]}
                          placement="right"
                          rootClose={false}
                          show={false}
                        >
                          <Overlay
                            placement="right"
                            rootClose={false}
                            show={false}
                            transition={[Function]}
                          />
                        </Overlay>
                      </span>
                    </Component>
                  </span>
                </DomainFieldLabel>
              </div>
            </div>
          </Col>
          <Col
            bsClass="col"
            componentClass="div"
            xs={10}
          >
            <div
              className="col-xs-10"
            >
              <FormControl
                bsClass="form-control"
                className=""
                componentClass="input"
                id="entity-nameExpression"
                onChange={[MockFunction]}
                type="text"
                value="Test Name Expression"
              >
                <input
                  className="form-control"
                  id="entity-nameExpression"
                  onChange={[MockFunction]}
                  type="text"
                  value="Test Name Expression"
                />
              </FormControl>
            </div>
          </Col>
        </div>
      </Row>
    </form>
  </Form>
</EntityDetailsForm>
`;
